--- a/Authntication/src/views/login.ejs
+++ b/Authntication/src/views/login.ejs
@@ -129,7 +129,7 @@
           <a href="#!" class="text-white me-4">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="/google" class="text-white me-4">
+          <a href="/auth" class="text-white me-4">
             <i class="fab fa-google"></i>
           </a>
           <a href="#!" class="text-white">
