--- a/Authntication/src/views/index.ejs
+++ b/Authntication/src/views/index.ejs
@@ -86,6 +86,7 @@
             </li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li><a class="nav-link scrollto" href="/logout">LogOut</a></li>
+            <li><a class="nav-link scrollto" href="/login">LogIn</a></li>
             <li>
               <a class="getstarted scrollto" href="#home">Get Started</a>
             </li>
@@ -113,7 +114,7 @@
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="/about" class="btn-get-started scrollto">Get Started</a>
               <a
-                href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
+                href="https://www.youtube.com/watch?v=nc6a39xldVw"
                 class="glightbox btn-watch-video"
                 ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
               >
