--- a/Authntication/src/views/register.ejs
+++ b/Authntication/src/views/register.ejs
@@ -39,6 +39,7 @@
                             class="form-control"
                             name="name"
                             placeholder="Name"
+                            required
                           />
                           <!-- <label class="form-label" for="form3Example1c">Your Name</label> -->
                         </div>
@@ -52,6 +53,7 @@
                             class="form-control"
                             name="email"
                             placeholder="Email"
+                            required
                           />
                           <!-- <label class="form-label" for="form3Example3c">Your Email</label> -->
                         </div>
@@ -65,6 +67,7 @@
                             class="form-control"
                             name="password"
                             placeholder="Password"
+                            required
                           />
                           <!-- <label class="form-label" for="form3Example4c ">Password</label> -->
                         </div>
@@ -78,6 +81,7 @@
                             class="form-control"
                             name="retype_password"
                             placeholder="Confirm Password"
+                            required
                           />
                           <!-- <label class="form-label" for="form3Example4cd">Repeat your password</label> -->
                         </div>
@@ -85,21 +89,11 @@
 
                       <div class="form-group">
                         <label class="radio inline">
-                          <input
-                            type="radio"
-                            name="gender"
-                            value="male"
-                            checked
-                          />
+                          <input type="radio" name="gender" value="male" />
                           <span>Male</span>
                         </label>
                         <label class="radio inline">
-                          <input
-                            type="radio"
-                            name="gender"
-                            value="female"
-                            checked
-                          />
+                          <input type="radio" name="gender" value="female" />
                           <span>Female</span>
                         </label>
                       </div>
